[package]
name = "dungeon-demons"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.58"
pathfinding = "3.0"
lazy_static = "1.4"
float-ord = "0.3.2"
fxhash = "0.2.1"
smolset = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.8", features = ["union", "const_generics", "specialization"] }
web-sys = { version = "0.3.58", features = ["Window", "Performance"] }
wasm-bindgen = "0.2.81"
specs = { version = "0.17.0", default-features = false, features = ["derive"] }
log = "0.4.17"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true
codegen-units = 1